Add some CSS to make two columns

--- a/public/custom.css
+++ b/public/custom.css
@@ -46,3 +46,13 @@ h5 {
   top: -112px;
   left: 0;
 }
+
+.pull-left {
+  float: left;
+  width: 47%;
+}
+
+.pull-right {
+  float: right;
+  width: 47%;
+}
